<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_password_first"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_oval_stroke"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/et_password_second"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_oval_stroke"
        android:hint="@string/input_again"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|bottom"
        android:paddingTop="2dp"
        android:text="@string/notice"
        android:textSize="12sp" />


    <LinearLayout
        android:id="@+id/ll_agree_protocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/i_agree"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_agree_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/escape_clause"
            android:textColor="@color/normal_button"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/normal_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>


