<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="100dp"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        style="@style/linear_layout_width_weight_space_item"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_name"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_zero"
            android:layout_weight="1"
            android:background="@color/dodger_blue"
            android:text="@string/platform_prescription"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_zero"
            android:layout_weight="0.2" />

        <lecho.lib.hellocharts.view.ColumnChartView
            android:id="@+id/chart_in"
            android:layout_width="50dp"
            android:layout_height="@dimen/dp_zero"
            android:focusable="false"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_zero"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="58%" />
    </LinearLayout>

    <LinearLayout
        style="@style/linear_layout_width_weight_space_item"
        android:layout_weight="0.3" />

    <LinearLayout
        style="@style/linear_layout_width_weight_space_item"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_zero"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_txt_title"
                android:layout_width="@dimen/dp_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/varicose_veins"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_tv_date"
                android:layout_width="@dimen/dp_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/year_month_date" />
        </LinearLayout>

        <TextView
            android:id="@+id/id_tv_content"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_zero"
            android:layout_weight="2"
            android:lines="3"
            android:text="@string/describe" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_zero"
            android:layout_weight="0.2" />
    </LinearLayout>
</LinearLayout>